js completed for counter

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
     <div class="button-container">
 
-    <button class="btns" id="increase">  Increase  </button>
+    <button class="btns increase" id="increase">  Increase  </button>    
 
-    <button  class="btns" id="decrease"> Decrease </button>
+    <button  class="btns reset" id="reset">  Reset </button>
 
+    <button  class="btns decrease" id="decrease"> Decrease </button>
 
-    <button  class="btns" id="reset">  Reset </button>
 
 </div>
 
